--- a/blogpost.html
+++ b/blogpost.html
@@ -7,8 +7,8 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de 
-                    confianza</span>
+                <span id="tagline">Tu blog 
+                    maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo
@@ -23,8 +23,8 @@
                     Muchi más que ir a conferencias
                     o salir en Youtube. Excepto si eres
                     un rockstar pero estadisticamente
-                    no lo eres... por ahora.
-                    </p>  
+                    no lo eres... por ahora.</p>
+                    <p>Suscribe y dale like</p> 
             </div>
         </div> 
     </body>
