--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido a Hyperblog 2.0</title>
+        <title>Hyperblog 2.0 es un blog del futuro</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
@@ -15,15 +15,15 @@
                 <h1>Este es el título atractivo
                     e interesante del post
                 </h1>
-                <p>Y este es el párrafo de inicio
+                <p>Y este es el p&aacute;rrafo de inicio
                     donde vamos a explicar las cosas
-                    increíbles que se pueden hacer
+                    incre&iacute;bles que se pueden hacer
                     con ramas</p>
                     <p>Los blogs son la mejor forma
-                    de compartir información y tus ideas.
-                    Muchi más que ir a conferencias
+                    de compartir informaci&oacute;n y tus ideas.
+                    Mucho más que ir a conferencias
                     o salir en Youtube. Excepto si eres
-                    un rockstar pero estadisticamente
+                    un rockstar pero estad&iacute;sticamente
                     no lo eres... por ahora.</p>
                     <p>Suscribe y dale like</p> 
             </div>
