--- a/blogpost.html
+++ b/blogpost.html
@@ -19,7 +19,7 @@
                     donde vamos a explicar las cosas
                     incre&iacute;bles que se pueden hacer
                     con ramas</p>
-                    <p><img src="imagenes/equipo.jpg" width="100%"/></p>
+                    <p><img src="https://imgur.com/x7AYLEh.jpg" width="100%"/></p>
                     <p>Los blogs son la mejor forma
                     de compartir informaci&oacute;n y tus ideas.
                     Mucho más que ir a conferencias
