Cambio al tagline y color del footer2

--- a/blogpost.html
+++ b/blogpost.html
@@ -28,6 +28,9 @@
                     no lo eres... por ahora.</p>
                     <p>Suscribe y dale like</p> 
             </div>
+            <div id="footer"> 
+                <h1>Hecho con amor en Platzi babys</h1>
+            </div>
         </div> 
     </body>
 </html>
